k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-backend
  namespace: demo-app
  labels:
    app: demo-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-backend
  template:
    metadata:
      labels:
        app: demo-backend
    spec:
      containers:
        - name: demo-backend
          image: cycle123/demo-backend:1ca230736e54ae22e4660d7a3f39c14b82ec995e
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http

          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
