k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo-app
  annotations:

    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx

  rules:
    - http:  
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-backend-service
                port:
                  number: 8080
